--- a/Website/sistema-nervoso.html
+++ b/Website/sistema-nervoso.html
@@ -17,10 +17,30 @@
         <center>
             <h1 class="title-sis-nervs">Sistema nervoso</h2>
                 
-                <p>
-                    Salve<br>
-                    ci sto ancora lavorando ok?
-                </p>
+            <p>
+                <ul class="nervs-lista1">
+                    <b>
+                        <li>Elabora</li>
+                        <li>Riceve</li>
+                        <li>Trasmette</li>
+                    </b>
+                </ul>
+                <h2>Sistema nervoso centrale</h2>
+                <ul class="nervs-lista2">
+                    <li>Encefalo</li>
+                    <li>Cervello</li>
+                    <li>Cervelletto</li>
+                    <li>Bulbo/Midollo allungato</li>
+                    <li>Midollo spinale</li>
+                    <li><b>Cellule nervose</b>
+                        <ul>
+                            <li>Le uniche che una volta decedute non si riprendono</li>
+                            <li>Forma a stella</li>
+                        </ul>
+                    </li>
+                </ul>
+                <img src="Neuroni.png" class="neuroni">
+            </p>
         </center>
         
         <a href="index.html" target="_self">
