--- a/Website/Musica/musica-link.html
+++ b/Website/Musica/musica-link.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
         
         <title>Cosa - Sistema nervoso</title>
         <link rel="icon" type="image/png" href="Icon.svg">
@@ -30,7 +30,7 @@
             </p>
         </center>
         
-        <a href="index.html" target="_self">
+        <a href="../index.html" target="_self">
             <button class="indietro">Indietro</button>
         </a>
     </body>
