--- a/Website/Scienze/sistema-nervoso.html
+++ b/Website/Scienze/sistema-nervoso.html
@@ -2,10 +2,10 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
         
         <title>Cosa - Sistema nervoso</title>
-        <link rel="icon" type="image/png" href="Icon.svg">
+        <link rel="icon" type="image/png" href="../Icon.svg">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
             </p>
         </center>
         
-        <a href="index.html" target="_self">
+        <a href="../index.html" target="_self">
             <button class="indietro">Indietro</button>
         </a>
     </body>
