--- a/Website/Storia/storia.html
+++ b/Website/Storia/storia.html
@@ -14,7 +14,7 @@
   
   <body>
     <h1 class="topbar">
-      <img src="../icon.svg" class="title_image">
+      <img src="../Icon.svg" class="title_image">
       <a href="../index.html" target="_self" class="title">
         Storia
       </a>
