Modifica all'ultimo minuto

--- a/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
+++ b/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
@@ -59,7 +59,7 @@
             <h2 class="sottotitolo">Fonti</h2>
             <ul class="lista">
               <li class="testo"><span class="evidenzia">Struttura</span> <a class="link" href="https://www.tecnoenergialaspeziasrl.com/eolico/impianto-eolico/" target="_blank">sito di Tecno Energia</a></li>
-              <li class="testo"><span class="evidenzia">Definizioni</span><a class="link" href="https://www.enelgreenpower.com/it/learning-hub/energie-rinnovabili/energia-eolica/parco-eolico-offshore" target="_blank"> Parco Eolico Offshore | Enel Green Power | Enel Green Power</a></li>
+              <li class="testo"><span class="evidenzia">Definizioni</span><a class="link" href="https://www.enelgreenpower.com/it/learning-hub/energie-rinnovabili/energia-eolica/parco-eolico-offshore" target="_blank"> Parco Eolico Offshore | Enel Green Power</a></li>
             </ul>
           </div>
 
