Messo a posto errore 2

--- a/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
+++ b/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
@@ -45,7 +45,7 @@
 
             <div class="contieni-didascalia">
               <span class="didascalia"><em>↓ Tipi di pala eolica ad asse verticale (francese)</em></span>
-              <a href="http://www.siallerinnovabili.it/355/eolico-verticale-cose-e-come-funziona-dove-utilizzarlo/" target="_blank">
+              <a href="http://www.fotovoltaicosulweb.it/guida/le-turbine-eoliche-ad-asse-verticale.html" target="_blank">
                 <img src="Tipi di pala eolica.jpg" class="immagine-descrizione">
               </a>
             </div>
