--- a/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
+++ b/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
@@ -64,7 +64,7 @@
           </div>
 
         
-        <a href="../index.html" target="_self">
+        <a href="../../index.html" target="_self">
           <button class="indietro">Indietro</button>
         </a>
     </body>
