--- a/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
+++ b/Website/Tecnologia/Le pale eoliche/le-pale-eoliche.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./styles.css">
         
         <title>Cosa - Le pale eoliche</title>
-        <link rel="icon" type="image/png" href="Icon.svg">
+        <link rel="icon" type="image/png" href="../../Icon.svg">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
